# woodfiredpizza

./: event_planner.js  hidden.js  index.html  main.css  package-lock.json
pizza_and_bread/: README.md  index.html  main.css  pyproject.toml  workspace.code-workspace
pizza_and_bread/pizza_and_bread/: config.py  main.py
pizza_and_bread/pizza_and_bread/logging/: logging.py
pizza_and_bread/pizza_and_bread/models/: base.py  temperature.py
pizza_and_bread/pizza_and_bread/schemas/: temperature.py
pizza_and_bread/pizza_and_bread/services/: generate_data.py  queries.py  timestream_query_service.py  timestream_write_service.py
