[tool.poetry]
name = "pizza-and-bread"
version = "0.1.0"
description = ""
authors = ["MiThCeKi <michaeltcking@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
starlette = "^0.37.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
