[tool.poetry]
name = "pizza-and-bread"
version = "0.1.0"
description = ""
authors = ["MiThCeKi <michaeltcking@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
databases = "^0.9.0"
pydantic = "^2.7.4"
pylint = "^3.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
